--- a/dataeval-app/src/app/admin/manageuser/manageuser.component.html
+++ b/dataeval-app/src/app/admin/manageuser/manageuser.component.html
@@ -3,7 +3,7 @@
     <div class="container-fluid rounded-top d-block  p-2 bg-dark text-white">
         <h4 class="modal-title" id="modal-basic-title">Manage Users</h4>
     </div>
-    <!-- <div class="container-fluid">
+      <div class="container-fluid">
         
     <div class="modal-body ">
         <form [formGroup]="searchForm"   (ngSubmit)="search()">
@@ -17,27 +17,26 @@
             <div class="form-group col-4"> 
                 <label for="rName"  class="font-weight-bold text-dark label-font">Section</label>
                 <select formControlName="rName"  class="form-control" value="">
-                    <option value='' disabled selected="{{dataSource.query.sectionId == '' ">Please select</option>
-                    <option *ngFor="let section of sections" [value]="section.id">{{section.name}}
+                    <option value='' disabled selected="{{dataSource.query.roleId == '' ">Please select</option>
+                    <option *ngFor="let role of roles" [value]="role.name">{{role.name | titlecase}}
                     </option>
                 </select>
             </div>
         </div>
             
        
-        <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">
-            <button type="submit" class="btn btn-secondary" >Search</button> &nbsp;
-            <button type="button" class="btn btn-secondary" (click)="resetSearch()" >Reset</button>
+        <div style="  text-align: right; margin-right: 50px;">
+            <button type="submit" class="btn btn-secondary btn-sm" >Search</button> &nbsp;
+            <button type="button" class="btn btn-secondary btn-sm" (click)="resetSearch()" >Reset</button>&nbsp;
+            <button type="button" class="btn btn-secondary btn-sm" (click)="open(content)">Add</button>
         </div>
 
         </form>
     </div> 
     </div>
 
-    <hr/>-->
-    <div style="margin-top:10px; margin-bottom: 10px; text-align: right; margin-right: 50px;">`
-        <button type="button" class="btn btn-secondary" (click)="open(content)">Add</button>
-    </div>
+    <hr/> 
+   
     <div class="mat-elevation-z8">
 
         <mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
@@ -62,6 +61,24 @@
                 <mat-cell *matCellDef="let row"> {{row.label}} </mat-cell>
             </ng-container>
 
+             <!-- First Name Column -->
+             <ng-container matColumnDef="firstname">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> First Name </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.firstName}} </mat-cell>
+            </ng-container>
+
+            <!-- Last Name Column -->
+            <ng-container matColumnDef="lastname">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.lastName}} </mat-cell>
+            </ng-container>
+
+            <ng-container matColumnDef="dateOfBirth">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Date Of Birth </mat-header-cell>
+                <mat-cell *matCellDef="let row"> {{row.dateOfBirth | date: "longDate"}} </mat-cell>
+            </ng-container>
+
+
             <!-- Status Column -->
             <ng-container matColumnDef="status">
                 <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
@@ -71,7 +88,7 @@
             <ng-container matColumnDef="actions">
                 <mat-header-cell *matHeaderCellDef> Action </mat-header-cell>
                 <mat-cell *matCellDef="let row">
-                    <button mat-raised-button class="btn btn-secondary" *ngIf="row.role.name !=  'admin' && row.role.name !=  'ADMIN'" (click)="openEdit(contentEdit, row)">
+                    <button   class="btn btn-secondary btn-sm" *ngIf="row.role.name !=  'admin' && row.role.name !=  'ADMIN'" (click)="openEdit(contentEdit, row)">
                         Edit</button>
                 </mat-cell>
             </ng-container>
@@ -88,7 +105,7 @@
 
     <ng-template #content let-modal>
         <div class="modal-header">
-            <h4 class="modal-title" id="modal-basic-title">Add Question</h4>
+            <h4 class="modal-title" id="modal-basic-title">Add User</h4>
             <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')"
                 #closeFlowConfigModal>
                 <span aria-hidden="true">&times;</span>
@@ -96,30 +113,64 @@
         </div>
         <div class="modal-body">
             <form [formGroup]="createForm" #formDirective="ngForm" (ngSubmit)="save()">
-
-
                 <div class="form-group">
-                    <label for="sName" class="font-weight-bold">Name :</label>
-                    <input type="text" class="form-control" id="sName" placeholder="Enter Question"
+                    <label for="sName" class="font-weight-bold">User Name :</label>
+                    <input type="text" class="form-control" id="sName" placeholder="Enter User Name"
                         name="sName" formControlName="sName" required>
-
-
                 </div>
-                 
-
                 <div class="mt-2">
                     <div *ngIf="sName.invalid && (sName.dirty || sName.touched)"
                         class="alert alert-danger">
                         <div *ngIf="createForm.controls['sName']?.errors.required">
-                            Name is required.
+                            User Name is required.
                         </div>
                         <div *ngIf="createForm.controls['sName']?.errors.minlength">
-                            Name must be at least 4 characters long.
+                            User Name must be at least 4 characters long.
                         </div>
 
                     </div>
                 </div>
 
+                <div class="form-group">
+                    <label for="fName" class="font-weight-bold">First Name :</label>
+                    <input type="text" class="form-control" id="fName" placeholder="Enter First Name"
+                        name="fName" formControlName="fName" required>
+                </div>
+                <div class="mt-2">
+                    <div *ngIf="fName.invalid && (fName.dirty || fName.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="createForm.controls['fName']?.errors.required">
+                            First Name is required.
+                        </div>
+                        <div *ngIf="createForm.controls['fName']?.errors.minlength">
+                            First Name must be at least 4 characters long.
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="lName" class="font-weight-bold">Last Name :</label>
+                    <input type="text" class="form-control" id="lName" placeholder="Enter Last Name Name"
+                        name="lName" formControlName="lName" required>
+                </div>
+                <div class="mt-2">
+                    <div *ngIf="lName.invalid && (lName.dirty || lName.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="createForm.controls['lName']?.errors.required">
+                            Last Name is required.
+                        </div>
+                        <div *ngIf="createForm.controls['lName']?.errors.minlength">
+                            Last Name must be at least 4 characters long.
+                        </div>
+
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="dateOfBirth" class="font-weight-bold">Date Of Birth :</label>
+                    <input type="date" class="form-control" id="dateOfBirth" placeholder="Enter Last Name Name"
+                        name="dateOfBirth" formControlName="dateOfBirth" >
+                </div>
                  
                 <div class="form-group">
                     <label for="userType" class="font-weight-bold">User Type</label>
@@ -161,7 +212,7 @@
 
     <ng-template #contentEdit let-modal>
         <div class="modal-header">
-            <h4 class="modal-title" id="modal-basic-title">Update Question</h4>
+            <h4 class="modal-title" id="modal-basic-title">Update User</h4>
             <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')"
                 #closeFlowConfigModal>
                 <span aria-hidden="true">&times;</span>
@@ -169,16 +220,16 @@
         </div>
         <div class="modal-body">
             <form [formGroup]="editForm" (ngSubmit)="updateQuestion()">
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <label for="id">Id</label>
                     <div class="input-group">
                         <input readonly class="form-control" formControlName="id">
                     </div>
-                </div>
+                </div> -->
 
                 <div class="form-group">
                     <label for="eName" class="font-weight-bold">Name :</label>
-                    <input type="text" class="form-control" id="eName" placeholder="Enter Flow Name"
+                    <input type="text" class="form-control" id="eName" placeholder="Enter User Name"
                         name="eName" formControlName="eName" required>
 
 
@@ -187,13 +238,56 @@
                     <div *ngIf="eName.invalid && (eName.dirty || eName.touched)"
                         class="alert alert-danger">
                         <div *ngIf="editForm.controls['eName']?.errors.required">
-                            Name is required.
+                            User Name is required.
                         </div>
                         <div *ngIf="editForm.controls['eName']?.errors.minlength">
-                            Name must be at least 4 characters long.
+                            User Name must be at least 4 characters long.
                         </div>
 
                     </div>
+                </div>
+
+
+                <div class="form-group">
+                    <label for="fName" class="font-weight-bold">First Name :</label>
+                    <input type="text" class="form-control" id="fName" placeholder="Enter First Name"
+                        name="fName" formControlName="fName" required>
+                </div>
+                <div class="mt-2">
+                    <div *ngIf="efName.invalid && (efName.dirty || efName.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="editForm.controls['fName']?.errors.required">
+                            First Name is required.
+                        </div>
+                        <div *ngIf="editForm.controls['fName']?.errors.minlength">
+                            First Name must be at least 4 characters long.
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="lName" class="font-weight-bold">Last Name :</label>
+                    <input type="text" class="form-control" id="lName" placeholder="Enter Last Name"
+                        name="lName" formControlName="lName" required>
+                </div>
+                <div class="mt-2">
+                    <div *ngIf="elName.invalid && (elName.dirty || elName.touched)"
+                        class="alert alert-danger">
+                        <div *ngIf="editForm.controls['lName']?.errors.required">
+                            Last Name is required.
+                        </div>
+                        <div *ngIf="editForm.controls['lName']?.errors.minlength">
+                            Last Name must be at least 4 characters long.
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="dateOfBirth" class="font-weight-bold">Date Of Birth :</label>
+                    <input type="date" class="form-control" id="dateOfBirth" placeholder="Enter Date Of Birth"
+                        name="dateOfBirth" formControlName="dateOfBirth"   >
                 </div>
 
                 
@@ -201,7 +295,7 @@
                     <label for="userType" class="font-weight-bold">User Type</label>
 
 
-                    <select class="custom-select"  formControlName="userType"> 
+                    <select class="custom-select"  formControlName="userType" > 
                         <option *ngFor="let role of roles"  
                             value="{{role.id}}">
                             {{role.name | titlecase}}</option>
