add new ui to backend

--- a/dataeval-app/src/app/admin/change-password/change-password.component.html
+++ b/dataeval-app/src/app/admin/change-password/change-password.component.html
@@ -1,7 +1,7 @@
 <div style="width:100%; margin-top: 5px; margin-bottom: 20px;" class="border">
 
 
-    <div class="container-fluid rounded-top d-block  p-2 bg-dark text-white">
+    <div class=" sticky-top container-fluid rounded-top d-block  p-2 bg-dark text-white">
         <div class="row">
             <div class="col-6">
                 <h4 class="modal-title" id="modal-basic-title">Change Password</h4>
@@ -14,7 +14,7 @@
     </div>
     <div>
 
-        <div class="card" style="min-height: 600px;">
+        <div class="card" >
            <alert></alert>
             <div class="card-body">
 
