--- a/dataeval-app/src/app/manage-patinetlog/view-patinetlog.component.html
+++ b/dataeval-app/src/app/manage-patinetlog/view-patinetlog.component.html
@@ -1,6 +1,6 @@
 <div style="width:100%; margin-top: 5px;" class="border">
 
-    <div class="container-fluid rounded-top d-block  p-2 bg-dark text-white">
+    <div class=" sticky-top container-fluid rounded-top d-block  p-2 bg-dark text-white">
         <h4 class="modal-title" id="modal-basic-title">View Patient Call Log</h4>
     </div>
     <div class="container-fluid">
@@ -14,13 +14,15 @@
                         <div class="form-group">
                             <label for="callType" class="font-weight-bold text-dark label-font">Call Type</label>
                             <select class="form-control" formControlName="callType" id="callType">
-                                <option value="Inbound">Inbound</option>
-                                <option value="Outbound">Outbound</option>
-                                <option value="Conference">Conference</option>
+                                <option value="Patient Call">Patient Call</option>
+                                <option value="Pharmacy Calls">Pharmacy Calls</option>
+                                <option value="Referral Calls">Referral Calls</option>
+                                <option value="Personal Needs">Personal Needs</option>
+                                <option value="Community Needs">Community Needs</option>
                             </select>
                         </div>
                     </div>
-                    <div class="col-4">
+                    <div class="col-4">  
                         <div class="form-group">
                             <label for="patientName" class="font-weight-bold text-dark label-font">Patient
                                 Name</label>
