--- a/dataeval-app/src/app/patinet-calllog-details/select-patient.component.html
+++ b/dataeval-app/src/app/patinet-calllog-details/select-patient.component.html
@@ -1,6 +1,6 @@
 <div style="width:100%; margin-top: 5px;" class="border">
 
-    <div class="container-fluid rounded-top d-block  p-2 bg-dark text-white">
+    <div class=" sticky-top container-fluid rounded-top d-block  p-2 bg-dark text-white">
         <h4 class="modal-title" id="modal-basic-title">  <a    (click)="navigateBack()">
             &#x25c0; </a> Select Patient</h4>
     </div>
