--- a/dataeval-app/src/app/app.component.scss
+++ b/dataeval-app/src/app/app.component.scss
@@ -1,5 +1,5 @@
 mat-toolbar {
-    background: #004a9f;
+    background: #ec1e79;
     color: white;
 }
 
@@ -7,8 +7,8 @@ mat-sidenav {
     margin: 16px;
     width: 240px;
     border-right: none;
-    background: #002b5c;
-    color: white;
+    background: white;
+    color: #666;
     border-radius: 10px;
     padding: 16px;
     text-align: center;
@@ -25,7 +25,7 @@ mat-sidenav {
     align-items: center;
 
     font-size: 2rem;
-    color: lightgray;
+    color: #666;
 }
 
 mat-sidenav-container {
